--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,10 @@
 #footerPage {
     background-color: #000000;
     color: #ffffff;
-    box-shadow: inset  0 -2px 20px #008181;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-    gap: 1rem;
 }
 
     #footerPage > h1 {
@@ -22,13 +20,15 @@
 
         .moveTo {
             text-decoration: none;
-            color: #ffffff;
-            border: solid 1px #ffffff;
-            border-radius: 10px;
+            color: #000000;
+            background-color: #00ffff;
+            box-shadow: inset 0 0 20px #008888;
+            border-radius: 40px;
+            transition: all 1s;
         }
 
         .moveTo:hover {
-            box-shadow: 0 0 10px #008181;
+            transform: scale(1.04);
         }
 
             .contacts {
