--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,5 @@
 body {
-    background: 
-        linear-gradient(125deg, #000000 0%,
-                                #7e7e7e 50%, 
-                                #000000 100%);
+    background: linear-gradient(125deg, #222222 0%, #7e7e7e 50%, #000000 100%);
     color: #ffffff;
 }
 
@@ -111,21 +108,27 @@ body {
                 padding: 8px;
                 border-radius: 20px;
                 box-shadow: inset 0 0 10px #008888;
-                transition: all 1s;
             }
 
                 #cv:hover {
-                    box-shadow: 0 0 10px #000000, 
-                                inset 0 0 10px #008888;
+                    box-shadow: 0 0 10px #000000, inset 0 0 10px #008888;
                 }
 
     .title {
-        background-color: #000000;
-        box-shadow: inset 0 0 10px #00ffff;
+        background-color: #00000080;
         text-align: center;
-        font-size: 30px;
+        font-size: 40px;
         padding: 10px;
         letter-spacing: 4px;
+        color: #000000;
+        text-shadow: 0 -6px 20px #ffffff80;
+    }
+
+    hr {
+        width: 60%;
+        margin: auto;
+        box-shadow: 0 -2px 12px #ffffffaf;
+        border: solid 1px #888888;
     }
 
     #skills {
@@ -133,16 +136,14 @@ body {
         justify-items: center;
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
         background-color: #00000080;
-        padding: 1rem;
+        padding: 2rem 1rem;
         gap: 1rem;
     }
 
     .card {
         width: 190px;
         height: 254px;
-        background-image: linear-gradient(163deg, 
-                                        #00ff75 0%, 
-                                        #3700ff 100%);
+        background-image: linear-gradient(163deg, #00ffff 0%, #3700ff 100%);
         border-radius: 20px;
         transition: all 1s;
     }
@@ -155,7 +156,7 @@ body {
             height: 254px;
             background-color: #1a1a1a;
             border-radius: 10px;
-            transition: all .2s;
+            transition: all 1s;
             overflow: hidden;
         }
        
@@ -165,7 +166,7 @@ body {
             }
             
             .card:hover {
-                box-shadow: 0 0 30px 1px #00ff754d;
+                box-shadow: 0 0 30px 1px #0088884d;
             }
 
         .ofImg {
@@ -178,7 +179,7 @@ body {
             .ofImg > img {
                 width: 100%;
                 border-radius: 20px;
-                
+                filter: drop-shadow( 0 0 6px #888888);
             }
 
         .foodCardskills {
@@ -193,7 +194,7 @@ body {
         justify-items: center;
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
         background-color: #00000080;
-        padding: 1rem;
+        padding: 2rem 1rem;
         gap: 1rem;
     }
 
@@ -211,13 +212,12 @@ body {
             height: 315px;
             border-radius: 10px;
             padding: 1rem;
-            box-shadow: 15px 15px 30px #191919,
-                        -15px -15px 30px #292929;
+            box-shadow: 15px 15px 30px #191919, -15px -15px 30px #292929;
+            transition: all 1s;
         }
 
             .cardProyect:hover {
-                border: solid 1px #00ffff;
-                box-shadow: inset 0 0 20px #000000;
+                transform: scale(1.08);
             }
 
 
